fix(twitch): Make text readable in miscellaneous sections (#219)
* Update low latency notification color

* Update ad disclosure color

* Update raid banner color

* Update points prediction color

* Update some weird window? color

* Fix icons in hype train popup

* Update gifting colors

* Update poll colors

* Fix pinned message

* Fix predictions

* Add comments

* update version number

---------

--- a/styles/twitch/catppuccin.user.css
+++ b/styles/twitch/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name           Twitch Catppuccin
 @namespace      github.com/catppuccin/userstyles/styles/twitch
 @homepageURL    https://github.com/catppuccin/userstyles/tree/main/styles/twitch
-@version        1.1.5
+@version        1.1.6
 @description    Soothing pastel theme for Twitch
 @author         Catppuccin
 @updateURL      https://github.com/catppuccin/userstyles/raw/main/styles/twitch/catppuccin.user.css
@@ -54,6 +54,8 @@
       background-color: @base;
     }
 
+    /* Stream title */
+
     p[data-test-selector="stream-info-card-component__subtitle"],
     p[data-test-selector="stream-info-card-component__description"] {
       color: @text !important;
@@ -63,31 +65,118 @@
       color: @accent-Color;
     }
 
+    /* `Pinned message` popup */
+
     div.pinned-chat__pinned-by svg {
       color: @text;
     }
 
     p.pinned-chat__message span {
-      color: @text;
+      color: @text !important;
     }
 
     p.pinned-chat__message a {
       color: @accent-Color;
     }
 
+    /* `Intended for certain audiences` label */
+
     div[data-a-target="content-classification-warning-disclosure-overlay"] p {
       color: @text;
     }
 
+    /* `Hype Train` popup */
+
     div.hype-train-progress-bar-info-view__level-container p,
     div.hype-train-approaching-view__leftSide p,
-    div.hype-train-expanded-layout p {
+    div.hype-train-expanded-layout p,
+    div.hype-train-expanded-layout svg {
       color: @text;
     }
 
     div.hype-train-progress-bar-info-view__progress-value span {
       color: @accent-Color;
     }
+
+    /* `Is video buffering?` warning */
+
+    div.low-latency-notification p {
+      color: @text;
+    }
+
+    /* `Includes paid promotion` label */
+
+    div.disclosure-card p,
+    div.disclosure-card svg {
+      color: @text;
+    }
+
+    /* Raiding popup */
+
+    div[data-test-selector="raid-banner"] {
+      color: @text;
+    }
+
+    /* `Predict with Channel Points` popup */
+
+    div[data-test-selector="expanded-content"] p,
+    p[data-test-selector="community-prediction-highlight-header__top-predictors"],
+    p[data-test-selector="community-prediction-highlight-body__outcome-title"] {
+      color: @text;
+    }
+
+    /* TODO: ensure that the poll does not default to this */
+    div[data-test-selector="header-content"] p {
+      color: @text !important;
+    }
+
+    div.channel-points-icon svg,
+    div[data-test-selector="header-content"] span,
+    div[data-test-selector="community-prediction-highlight-body__outcome-points"]
+      span {
+      color: @accent-Color;
+    }
+
+    button[data-test-selector="community-prediction-highlight-header__how-to-play"],
+    button[data-test-selector="community-prediction-highlight-header__terms-and-conditions"],
+    button[data-test-selector="community-prediction-highlight-header__send-feedback"],
+    button[data-test-selector="community-prediction-highlight-header__dismiss-message"] {
+      color: @text;
+    }
+
+    /* Poll popup */
+
+    div[data-test-selector="header-content"]
+      p:not(
+        [data-test-selector="community-prediction-highlight-header__title"],
+        [data-test-selector="header"]
+      ) {
+      color: @text !important;
+    }
+
+    /* `Report Poll` button */
+
+    button.gaoCTJ {
+      color: @text;
+    }
+
+    /* ??? */
+
+    div.happening-now-disable-prompt p {
+      color: @text !important;
+    }
+
+    /* Gifting sub popup */
+
+    div.mystery-gift-chat-banner span {
+      color: @accent-Color;
+    }
+
+    div.mystery-gift-chat-banner p {
+      color: @text;
+    }
+
+    /* TODO: moments */
 
     & .carousel-metadata {
       background: @crust;
